Fixed overflow issue with vue-select’s selected option

--- a/src/web/assets/commerceui/src/sass/_common.scss
+++ b/src/web/assets/commerceui/src/sass/_common.scss
@@ -82,6 +82,9 @@
           margin: 0;
           padding: 6px 12px;
           padding-right: 0;
+          left: 0;
+          right: 0;
+          text-align: left;
           position: absolute;
           overflow: hidden;
 
